test/types/range/cast-assign-init/illegal-assigns.1-0.good
illegal-assigns.chpl:11: error: assigning to a range with idxType color from a range with idxType bool without an explicit cast
